Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-1615

Access Invalid Memory When Run a Hash-join query with Bloomfilter Enable.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 2.4.0.0
    • Query Execution
    • None

    Description

      How to reproduce:
      1. set hawq_hashjoin_bloomfilter=true;
      2. run a query on TPCH database(1 master and 3 segments): select count from part, lineitem where p_partkey = l_partkey and p_brand = 'Brand#23' and p_container = 'MED BOX';
      The QE process accessed invalid memory.

      2018-05-16 06:27:40.010566 GMT,,,p567902,th0,,,2018-05-16 06:26:43 GMT,0,con21,cmd5,seg1,slice2,,,,"PANIC","XX000","Unexpected internal error: Segment process received signal SIGSEGV",,,,,,,0,,,,"1 0x969adb postgres <symbol not found> + 0x969adb
      2 0x969ce4 postgres StandardHandlerForSigillSigsegvSigbus_OnMainThread + 0x2b
      3 0x88540b postgres CdbProgramErrorHandler + 0xf1
      4 0x7ff663359370 libpthread.so.0 <symbol not found> + 0x63359370
      5 0x7221ff postgres ExecEndTableScan + 0x2f
      6 0x6e5864 postgres ExecEndNode + 0x2b1
      7 0x70cffb postgres ExecEndHashJoin + 0xdb
      8 0x6e5963 postgres ExecEndNode + 0x3b0
      9 0x704455 postgres ExecEndAgg + 0x104
      10 0x6e59a7 postgres ExecEndNode + 0x3f4
      11 0x71613d postgres ExecEndMotion + 0x87
      12 0x6e5a0d postgres ExecEndNode + 0x45a
      13 0x704455 postgres ExecEndAgg + 0x104
      14 0x6e59a7 postgres ExecEndNode + 0x3f4
      15 0x6de6a5 postgres ExecEndPlan + 0x4b
      16 0x6dc139 postgres ExecutorEnd + 0x2fc

      Attachments

        Issue Links

          Activity

            People

              wlin Wen Lin
              wlin Wen Lin
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: