HAWQ-1615. Fix accessing invalid memory when run a hash-join query with Bloomfilter enable. The BloomFilter structure in RuntimeFilterState should be allocated, instead of using the address of HashJoinTable's BloomFilter, since it may be released when function FreeScanRuntimefilterState() tries to access it.